--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -57,6 +57,7 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-storysource": "^6.3.12",
+    "@storybook/addon-a11y": "^6.3.12",
     "@storybook/addons": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "@types/react": "^17.0.34",
@@ -72,11 +73,9 @@
     "tailwindcss": "^2.2.19",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
-  },
-  "dependencies": {
+    "typescript": "^4.4.4",
     "@headlessui/react": "^1.4.2",
-    "@storybook/addon-a11y": "^6.3.12",
     "framer-motion": "^5.3.0"
-  }
+  },
+  "dependencies": {}
 }
